login dan register

--- a/app/src/main/res/layout/fragment_register2.xml
+++ b/app/src/main/res/layout/fragment_register2.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Sign_up"
+    android:id="@+id/frameLayout"
     android:background="@drawable/ipon"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Log In"
+                android:text="Register"
                 android:textColor="#E6000000"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -75,29 +75,17 @@
                 app:tint="@color/black" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/konfirmasi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
-                android:text="Log in"
+                android:text="Konfirmasi"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
                 app:layout_constraintVertical_bias="0.0" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="Sign up"
-                android:textColor="#CC000000"
-                android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="@+id/button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/button" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -106,7 +94,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="ID"
+                android:text="Gmail"
                 android:textColor="#E6000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
